--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://kolya7mischenchuk7:pizza@cluster0.h27si8x.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://user:123@cluster0.0akwqzf.mongodb.net/
