--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.4.0",
     "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "gulp": "^4.0.0",
