--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^7.0.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "nodemailer": "^6.9.3",
     "normalize.css": "^8.0.1",
     "qs": "^6.11.0",
     "react": "18.2.0",
